--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
