--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,17 @@
-on: 
- push:
-  branches:
-    - main
+on:
+  push:
+    branches:
+      - main
 jobs:
   repo-sync:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-    - name: repo-sync
-      uses: wei/git-sync@v1
-      env:
-        SOURCE_REPO: "https://github.com/PocketCoder/blog.git"
-        SOURCE_BRANCH: "master"
-        DESTINATION_REPO: ${{ secrets.glitch_git_URL }}
-        DESTINATION_BRANCH: "master"
-      with:
-        args: $SOURCE_REPO $SOURCE_BRANCH $DESTINATION_REPO $DESTINATION_BRANCH
+      - name: repo-sync
+        uses: wei/git-sync@v1
+        env:
+          SOURCE_REPO: 'https://github.com/PocketCoder/blog.git'
+          SOURCE_BRANCH: 'master'
+          DESTINATION_REPO: ${{ secrets.glitch_git_URL }}
+          DESTINATION_BRANCH: 'master'
+        with:
+          args: $SOURCE_REPO $SOURCE_BRANCH $DESTINATION_REPO $DESTINATION_BRANCH
