--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: wei/git-sync@v1
         env:
           SOURCE_REPO: 'https://github.com/PocketCoder/blog.git'
-          SOURCE_BRANCH: 'master'
+          SOURCE_BRANCH: 'main'
           DESTINATION_REPO: ${{ secrets.GLITCH_GIT_URL }}
           DESTINATION_BRANCH: 'master'
         with:
